--- a/package.json
+++ b/package.json
@@ -23,16 +23,22 @@
     "@mantine/core": "^5.5.4",
     "@mantine/hooks": "^5.5.4",
     "@mantine/next": "^5.5.4",
+    "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.1",
     "tailwind-merge": "^1.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
+    "@redux-devtools/core": "^3.13.1",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -47,8 +53,10 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
+    "immutability-helper": "^3.1.1",
     "jest": "^27.5.1",
     "lint-staged": "^12.5.0",
+    "next-redux-wrapper": "^8.0.0",
     "next-router-mock": "^0.7.4",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.16",
