--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@headlessui/react": "^1.7.4",
-    "@mantine/core": "^5.5.4",
+    "@mantine/core": "^5.9.2",
     "@mantine/hooks": "^5.5.4",
     "@mantine/next": "^5.5.4",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
+    "moment": "^2.29.4",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
