--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/server": "^11.10.0",
     "@headlessui/react": "^1.7.4",
     "@mantine/core": "^5.9.2",
+    "@mantine/dropzone": "^5.9.2",
     "@mantine/hooks": "^5.5.4",
     "@mantine/next": "^5.5.4",
     "@reduxjs/toolkit": "^1.8.6",
