--- a/package.json
+++ b/package.json
@@ -29,33 +29,33 @@
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "moment": "^2.29.4",
-    "next": "^12.3.1",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.4",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
-    "tailwind-merge": "^1.6.0"
+    "tailwind-merge": "^1.13.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
     "@redux-devtools/core": "^3.13.1",
-    "@svgr/webpack": "^6.3.1",
+    "@svgr/webpack": "^6.5.1",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.21",
+    "@types/react": "^18.2.8",
     "@types/redux-persist": "^4.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.24.0",
-    "eslint-config-next": "^12.3.1",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^13.4.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
@@ -66,17 +66,17 @@
     "next-router-mock": "^0.7.4",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.3"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "eslint --max-warnings=0",
       "prettier -w"
     ],
-    "**/*.{json,css,scss,md}": [
+    "**/*.{json,css,scss,md,webmanifest}": [
       "prettier -w"
     ]
   }
