--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.29.1", features = ["full"] }
 prisma-client-rust = { workspace = true }
 dotenv = "0.15.0"
 tower-http = { version = "0.3.5", features = ["cors"] }
+specta = { version = "1.0.4", features = ["serde", "typescript"] }
