--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
+    "lodash.get": "^4.4.2",
     "moment": "^2.29.4",
     "next": "^13.4.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^4.9.0",
+    "react-image-lightbox": "^5.1.4",
     "react-redux": "^8.0.4",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
@@ -52,7 +57,9 @@
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/lodash.get": "^4.4.7",
     "@types/react": "^18.2.8",
+    "@types/react-datepicker": "^4.11.2",
     "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
@@ -71,6 +78,7 @@
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.16",
     "prettier": "^2.8.8",
+    "prettier-plugin-rust": "^0.1.9",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
@@ -80,7 +88,7 @@
       "eslint --max-warnings=0",
       "prettier -w"
     ],
-    "**/*.{json,css,scss,md,webmanifest}": [
+    "**/*.{json,css,scss,md,webmanifest,rs}": [
       "prettier -w"
     ]
   }
