--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rspc/client": "^0.1.3",
     "@rspc/react": "^0.1.3",
     "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "lodash.get": "^4.4.2",
