--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -17,3 +17,5 @@ dotenv = "0.15.0"
 tower-http = { version = "0.3.5", features = ["cors"] }
 specta = { version = "1.0.4", features = ["serde", "typescript"] }
 svix = "1.5.2"
+tower-cookies = "0.9.0"
+jsonwebtoken = "8.3.0"
