--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
-APP_ENV=
-BACKEND_URL=
+# BACKEND ENV
+CLERK_PEM_PUBLIC_KEY=
+DATABASE_URL=
+WEBHOOK_SECRET=
+
+# FRONTEND ENV
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/login
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/register
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+IMGBB_KEY=
+
