--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
+    "immer": "^10.0.2",
     "lodash.get": "^4.4.2",
     "moment": "^2.29.4",
     "next": "^13.4.4",
