--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/login
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/register
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
-IMGBB_KEY=
-
+STORAGE_URL=
+STORAGE_KEY=
