feat(web): replace imgbb to supabase

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@rspc/client": "^0.1.3",
     "@rspc/react": "^0.1.3",
+    "@supabase/storage-js": "^2.5.1",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.1.3",
