--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
     "@tremor/react": "^3.6.1",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "immer": "^10.0.2",
